Fix overflow on experiments

--- a/src/experiments/home/css/home.css
+++ b/src/experiments/home/css/home.css
@@ -6,7 +6,13 @@
     height: 100%;
     align-items: stretch;
     font-family: 'MicroSquare', sans-serif;
+    position: fixed;
     background-color: #1F2024;
+    top: 0;
+    right: 0;
+    left: 0;
+    overflow: auto;
+    bottom: 0;
 }
 
 .experimentsHome-title {
